# rust-mongodb

./: Cargo.toml  README.md
src/: config.rs  database.rs  errors.rs  jwt.rs  main.rs  routes.rs  state.rs  utils.rs  validate.rs
src/handlers/: auth.rs  health.rs  user.rs
src/middleware/: auth.rs
src/models/: coin.rs  mod.rs  user.rs
src/tests/: auth.rs  health.rs  helpers.rs  user.rs
