[package]
name = "rust-mongodb"
version = "0.1.0"
authors = ["Benjamin Jung <bsjung@gmail.com>", "ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.6.0"
chrono = "0.4.9"
uuid = "0.7"

derive_more = "0.15"
futures = "0.3.1"

actix = "0.9.0"
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-identity = "0.2.1"

dotenv = "0.14"
envy = "0.4"

bson = "0.14.0"
mongodb = "0.9.0"
lazy_static = "1.4.0"
rayon = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

argon2rs = "0.2.1"
jsonwebtoken = "7"
validator = "0.8.0"
validator_derive = "0.8.0"
